# kube-shell

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
kubeshell/: __init__.py  completer.py  kubeshell.py  style.py  toolbar.py
