[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-shell"
dynamic = ["version"]
description = "Kubernetes shell: An integrated shell for working with the Kubernetes CLI"
readme = "README.rst"
license = "Apache-2.0"
authors = [{name = "Cloudnative Labs"}]
keywords = ["kubernetes", "autocomplete", "shell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Programming Language :: Python 3",
]
requires-python = ">=3.6"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "Pygments>=2.1.3,<3.0.0",
    "fuzzyfinder>=1.0.0",
    "click>=4.0,<7.0",
    "kubernetes>=0.10.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/cloudnativelabs/kube-shell"

[project.scripts]
kube-shell = "kubeshell.main:cli"

[tool.setuptools]
packages = ["kubeshell"]

[tool.setuptools.dynamic]
version = {attr = "kubeshell.__version__"}

[tool.setuptools.package-data]
kubeshell = ["data/cli.json"]